--- a/Repos.Web.Admin/Views/Company/Create.cshtml
+++ b/Repos.Web.Admin/Views/Company/Create.cshtml
@@ -5,7 +5,7 @@
 
 <div>
     <div>
-        <h1>Registra una nueva empresa</h1>
+        <h2>Registra una nueva empresa</h2>
     </div>
     <div>
         <form asp-controller="Company" asp-action="Create" method="post">
@@ -13,7 +13,7 @@
             <br />
             <input type="text" asp-for="Name" placeholder="Nombre" required />
             <br />
-            <input type="submit" value="Guardar"/>
+            <input class="submit-button" type="submit" value="Guardar"/>
         </form>
     </div>
 </div>
