--- a/Repos.Web.Admin/Views/Company/Delete.cshtml
+++ b/Repos.Web.Admin/Views/Company/Delete.cshtml
@@ -35,7 +35,7 @@
             </dd>
         </dl>
 
-        <input type="submit" value="Si, borrar"/>
+        <input class="submit-button" type="submit" value="Si, borrar"/>
         <a asp-action="Index">No, regresar</a>
     </form>
 </div>
