--- a/Repos.Web.Admin/Views/Home/Index.cshtml
+++ b/Repos.Web.Admin/Views/Home/Index.cshtml
@@ -11,26 +11,32 @@
     
     
     <div class="box-selection">
-        <a asp-controller="Company" asp-action="Index">Empresa</a>
+        <div class="box-selection-image"><img src="~/content/images/business-white.png" /></div>
+        <div class="box-selection-link"><a asp-controller="Company" asp-action="Index">Empresa</a></div>
     </div>
 
     <div class="box-selection">
-        <a asp-controller="Store" asp-action="Index">Sucursal</a>
+        <div class="box-selection-image"><img src="~/content/images/store-white.png"/></div>
+        <div class="box-selection-link"><a asp-controller="Store" asp-action="Index">Sucursal</a></div>
     </div>
 
     <div class="box-selection">
-        <a asp-controller="Warehouse" asp-action="Index">Almacén</a>
+        <div class="box-selection-image"><img src="~/content/images/warehouse-white.png"/></div>
+        <div class="box-selection-link"><a asp-controller="Warehouse" asp-action="Index">Almacén</a></div>
     </div>
 
     <div class="box-selection">
-        <a asp-controller="Pos" asp-action="Index">Caja</a>
+        <div class="box-selection-image"><img src="~/content/images/cashier-white.png"/></div>
+        <div class="box-selection-link"><a asp-controller="Pos" asp-action="Index">Caja</a></div>
     </div>
 
     <div class="box-selection">
-        <a asp-controller="Item" asp-action="Index">Artículo</a>
+        <div class="box-selection-image"><img src="~/content/images/item-white.png"/></div>
+        <div class="box-selection-link"><a asp-controller="Item" asp-action="Index">Artículo</a></div>
     </div>
 
     <div class="box-selection">
-        <a asp-controller="Item" asp-action="GetInventory">Inventario</a>
+        <div class="box-selection-image"><img src="~/content/images/inventory-white.png"/></div>
+        <div class="box-selection-link"><a asp-controller="Item" asp-action="GetInventory">Inventario</a></div>
     </div>
 </div>
