--- a/Repos.Web.Admin/Views/Item/Delete.cshtml
+++ b/Repos.Web.Admin/Views/Item/Delete.cshtml
@@ -23,7 +23,7 @@
             <dd>@Html.DisplayFor(model => model.Price)</dd>
         </dl>
 
-        <input type="submit" value="Si, borrar"/>
+        <input class="submit-button" type="submit" value="Si, borrar"/><br />
         <a asp-action="Index">No, regresar</a>
     </form>
 </div>
