--- a/Repos.Web.Admin/Views/Pos/Delete.cshtml
+++ b/Repos.Web.Admin/Views/Pos/Delete.cshtml
@@ -20,7 +20,7 @@
             <dd>@Html.DisplayFor(model => model.Warehouse.Code)</dd>
         </dl>
 
-        <input type="submit" value="Si, borrar"/>
+        <input class="submit-button" type="submit" value="Si, borrar"/>
         <a asp-action="Index">No, regresar</a>
     </form>
 </div>
