--- a/Repos.Web.Admin/Views/Store/Delete.cshtml
+++ b/Repos.Web.Admin/Views/Store/Delete.cshtml
@@ -24,7 +24,7 @@
             <dd>@Html.DisplayFor(model => model.Status)</dd>
         </dl>
         
-        <input type="submit" value="Si, borrar"/>
+        <input class="submit-button" type="submit" value="Si, borrar"/><br />
         <a asp-action="Index">No, regresar</a>
     </form>
 </div>
