--- a/Repos.Web.Admin/Views/Warehouse/Delete.cshtml
+++ b/Repos.Web.Admin/Views/Warehouse/Delete.cshtml
@@ -22,7 +22,7 @@
             <dd>@Html.DisplayFor(model => model.Status)</dd>
         </dl>
 
-        <input type="submit" value="Si, borrar"/>
+        <input class="submit-button" type="submit" value="Si, borrar"/>
         <a asp-action="Index">No, regresar</a>
     </form>
 </div>
