--- a/Repos.Web.Admin/wwwroot/css/site.css
+++ b/Repos.Web.Admin/wwwroot/css/site.css
@@ -19,6 +19,10 @@ h3 {
     font-weight: 300;
 }
 
+label {
+    font-size: 20px;
+}
+
 nav {
     width: 100%;
     height: 50px;
@@ -105,15 +109,38 @@ a:visited {
     font-size: 20px;
     display: inline-block;
     margin: 20px 20px 20px 20px;
-    border: 1px solid #B9B9B9;
+    /*border: 1px solid #B9B9B9;*/
     border-radius: 7px;
     width: 150px;
-    height: 60px;
+    height: 70px;
+    line-height: 70px;
     text-align: center;
+    background-color: #333333;
 }
 
     .box-selection a {
-        line-height: 60px;
+        line-height: 70px;
+        color: white;
+    }
+
+    .box-selection img {
+        width: 30px;
+        height: 30px;
+        vertical-align: middle;
+    }
+
+    .box-selection-image {
+        float: left;
+        width: 30%;
+        height: 100%;
+        padding-left: 5px;
+    }
+
+    .box-selection-link {
+        float: left;
+        width: 55%;
+        height: 100%;
+        padding-right: 5px;
     }
 
 .edit-link img {
@@ -173,4 +200,8 @@ a:visited {
 .submit-button {
     background-color: #333333;
     color: white;
+}
+
+.long-textbox {
+    width: 300px;
 }
