Tab title spanish translation

--- a/Repos.Web.Admin/Views/Company/Delete.cshtml
+++ b/Repos.Web.Admin/Views/Company/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Company
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Borrar empresa";
 }
 
 <h2>Borrado de empresa @Model.Name</h2>
