--- a/Repos.Web.Admin/Views/Company/Edit.cshtml
+++ b/Repos.Web.Admin/Views/Company/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Company
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar empresa";
 }
 
 <h2>Edición de empresa @Model.Name</h2>
