--- a/Repos.Web.Admin/Views/Company/Index.cshtml
+++ b/Repos.Web.Admin/Views/Company/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Company
 @{
-    ViewData["Title"] = "Company";
+    ViewData["Title"] = "Empresa";
     var companies = ViewData["Companies"] as List<Company>;
 }
 
