--- a/Repos.Web.Admin/Views/Item/Delete.cshtml
+++ b/Repos.Web.Admin/Views/Item/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Item
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Borrar artículo";
 }
 
 <h2>Borrado de artículo @Model.Code (@Model.Description) </h2>
