--- a/Repos.Web.Admin/Views/Item/Edit.cshtml
+++ b/Repos.Web.Admin/Views/Item/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Item
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar artículo";
 }
 
 <h2>Edición de artículo @Model.Code</h2>
