--- a/Repos.Web.Admin/Views/Item/EditInventory.cshtml
+++ b/Repos.Web.Admin/Views/Item/EditInventory.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Inventory
 @{
-    ViewData["Title"] = "EditInventory";
+    ViewData["Title"] = "Editar inventario";
 }
 
 <h2>Edición de inventario</h2>
