--- a/Repos.Web.Admin/Views/Item/Index.cshtml
+++ b/Repos.Web.Admin/Views/Item/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Repos.Web.Admin.ViewModels
 @model ItemViewModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Artículos";
 }
 
 <div>
