--- a/Repos.Web.Admin/Views/Pos/Delete.cshtml
+++ b/Repos.Web.Admin/Views/Pos/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Pos
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Borrar caja";
 }
 
 <h2>Borrado de caja @Model.Name</h2>
