--- a/Repos.Web.Admin/Views/Pos/Index.cshtml
+++ b/Repos.Web.Admin/Views/Pos/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Repos.Web.Admin.ViewModels
 @model PosViewModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Cajas";
 }
 
 <div>
