--- a/Repos.Web.Admin/Views/Store/Delete.cshtml
+++ b/Repos.Web.Admin/Views/Store/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Store
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Borrar tienda";
 }
 
 <h2>Borrado de sucursal @Model.Name</h2>
