--- a/Repos.Web.Admin/Views/Store/Edit.cshtml
+++ b/Repos.Web.Admin/Views/Store/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Store
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar tienda";
 }
 
 <h2>Edición de sucursal @Model.Name</h2>
