--- a/Repos.Web.Admin/Views/Warehouse/Delete.cshtml
+++ b/Repos.Web.Admin/Views/Warehouse/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Warehouse
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Borrar almacén";
 }
 
 <h2>Borrado de almacén @Model.Name</h2>
