--- a/Repos.Web.Admin/Views/Warehouse/Edit.cshtml
+++ b/Repos.Web.Admin/Views/Warehouse/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Warehouse
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar almacén";
 }
 
 <h2>Edición de almacén @Model.Name</h2>
