--- a/Repos.Web.Admin/Views/Warehouse/Index.cshtml
+++ b/Repos.Web.Admin/Views/Warehouse/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Repos.Web.Admin.ViewModels
 @model WarehouseViewModel 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Almacenes";
 }
 
 <div>
