--- a/Repos.Web.Admin/Views/Item/GetInventory.cshtml
+++ b/Repos.Web.Admin/Views/Item/GetInventory.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Repos.Web.Admin.ViewModels
 @model InventoryViewModel
 @{
-    ViewData["Title"] = "Inventory";
+    ViewData["Title"] = "Inventario";
 }
 
 <div>
