--- a/Repos.Web.Admin/Views/Pos/Edit.cshtml
+++ b/Repos.Web.Admin/Views/Pos/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Pos
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar caja";
 }
 
 <h2>Edición de caja @Model.Name</h2>
