--- a/Repos.Web.Admin/Views/Store/Index.cshtml
+++ b/Repos.Web.Admin/Views/Store/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Repos.Web.Admin.ViewModels
 @model StoreViewModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Tiendas";
 }
 
 <div>
